# Operating-Systems

./: .gitignore
1_SEM_lab1/subtask1/: CMakeLists.txt  answer.txt  hello.c
1_SEM_lab1/subtask2/: answer.txt  hello.c  static-hello.c
1_SEM_lab1/subtask3/: CMakeLists.txt  dynamic-hello.h
1_SEM_lab2/subtask1/: hello_with_syscall.c  hello_with_write.c
1_SEM_lab2/subtask2/: main.c
1_SEM_lab3/subtask1/: main.c
1_SEM_lab3/subtask2/: CMakeLists.txt  main.c
1_SEM_lab4/subtask1/: invalid_heap_addr.c  local_var_addr.c
1_SEM_lab5/subtask1/: main.c
1_SEM_lab7/subtask1/: CMakeLists.txt  udp_client.c  udp_server.c
2_SEM_lab1/: joinable_and_detached_threads.c  threads_creation.c
2_SEM_lab1/subtask1/: CMakeLists.txt  README.md  program.exec
2_SEM_lab1/subtask1/handling_signals/: handling_signals.c
2_SEM_lab1/subtask1/joinable_and_detached/: join_example.c  thread_creation_in_loop_detach_attr.c  thread_creation_in_loop_detach_func.c
2_SEM_lab1/subtask1/thread_interruption/: thread_cancellation_handler_example.c  thread_interruption_iteration_in_loop.c  thread_interruption_strings.c
2_SEM_lab1/subtask1/thread_routine_args/: detach_thread_routine_args_heap.c  detach_thread_routine_args_stack.c  joinable_thread_routine_args.c  thread_routine_args.c
2_SEM_lab1/subtask1/threads_creation/: threads_creation.c
2_SEM_lab1/subtask2/: CMakeLists.txt  README.md
2_SEM_lab2/subtask1/: CMakeLists.txt  README.md  queue-example.c  queue-threads.c  queue.c  queue.h  (+1 more)
2_SEM_proxy/: Makefile  data_storage.c  data_storage.h  proxy.c
lab7/: udp_client.c  udp_server.c
(+70 files in other folders)
